<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.pedroid.onboarding.fragments.FirstScreenFragment">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mobile_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.pedroid.designsystem.component.CustomTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_marginTop="-20dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:gravity="center"
            android:text="@string/onboarding_first_screen_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:textPriority="primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img"
            app:textType="title2" />

        <com.pedroid.designsystem.component.CustomTextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/onboarding_first_screen_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
            android:id="@+id/next_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginVertical="@dimen/layout_margin"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>