<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.pedroid.onboarding.fragments.ThirdScreenFragment">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:src="@drawable/phone_mock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/middle_img"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@id/img"
            app:layout_constraintEnd_toEndOf="@id/img"
            app:layout_constraintStart_toStartOf="@id/img"
            app:layout_constraintTop_toTopOf="@id/img" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@id/img"
            app:layout_constraintEnd_toEndOf="@id/img"
            app:layout_constraintStart_toStartOf="@id/img"
            app:layout_constraintTop_toTopOf="@id/middle_img">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.pedroid.designsystem.component.CustomTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/onboarding_third_screen_title"
            app:layout_constraintBottom_toBottomOf="@id/gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gradient"
            app:textType="title2" />

        <com.pedroid.designsystem.component.CustomTextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/onboarding_third_screen_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
            android:id="@+id/next_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginVertical="@dimen/layout_margin"
            android:text="@string/go_to_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/previus_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginVertical="@dimen/layout_margin"
            android:text="@string/previus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>